# News-Vector-Store

./: .gitignore  Makefile  README.md  config.yml  llm_news_reporter.ipynb  main.py  pyproject.toml  query_db.ipynb  requirements.txt
data/example/: news_2023-11-09.json
src/: __init__.py  embed_news.py  news_api.py
src/utils/: __init__.py  load_configs.py  logger.py  schema.py
